--- a/service/web/WEB-INF/web.xml
+++ b/service/web/WEB-INF/web.xml
@@ -28,7 +28,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>appServlet</servlet-name>
-        <url-pattern>/remoting</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 
