--- a/web/pom.xml
+++ b/web/pom.xml
@@ -112,6 +112,12 @@
             <version>2.1.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.diosoft</groupId>
+            <artifactId>service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
